name:                ihfsm
version:             0.0.0.0
description:         Please see README.md
homepage:            https://github.com/swamp-agr/ihfsm#readme
license:             BSD3
license-file:        LICENSE
author:              Andrey Prokopenko
maintainer:          andre@an-pro.org
copyright:           2017 Andrey Prokopenko
category:            interpreter
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HFSM
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/swamp-agr/ihfsm
